--- a/index.html
+++ b/index.html
@@ -6,255 +6,160 @@
   <title>Sudoku</title>
   <style>
     body {
-      font-family: sans-serif;
-      padding: 10px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
     }
 
-    h1 { margin-bottom: 10px; }
+    h1 {
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
 
-    .board {
+    .sudoku-board {
       display: grid;
       grid-template-columns: repeat(9, 1fr);
-      gap: 1px;
       width: 90vmin;
       height: 90vmin;
-      margin-bottom: 15px;
-      background: black;
+      margin: 0 auto;
+      border: 4px solid black; /* Gruba ramka wokół planszy */
     }
 
     .cell {
-      background: white;
-      text-align: center;
-      vertical-align: middle;
-      font-size: 2.5vmin;
-      border: none;
-      outline: none;
-      user-select: none;
-      position: relative;
-    }
-
-    .cell.fixed {
-      font-weight: bold;
-      background: #eee;
-    }
-
-    .cell.selected {
-      background: #d0e6ff;
-    }
-
-    .notes {
-      font-size: 1.2vmin;
-      color: #999;
-      position: absolute;
-      top: 2px;
-      left: 2px;
-      text-align: left;
-      line-height: 1.2;
-    }
-
-    .number-pad {
+      border: 1px solid #aaa; /* Cienka ramka domyślna */
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 5px;
-      max-width: 300px;
+      align-items: center;
+      font-size: 2vmin;
+      aspect-ratio: 1;
+      position: relative;
+      cursor: pointer;
+      background-color: white;
     }
 
-    .number-pad button {
-      padding: 10px;
-      font-size: 18px;
-      min-width: 50px;
-      border-radius: 5px;
+    .cell.prefilled {
+      background-color: #eee;
+      font-weight: bold;
+    }
+
+    /* Grube linie co 3 kolumny */
+    .cell:nth-child(3n+1) {
+      border-left: 3px solid black;
+    }
+
+    .cell:nth-child(9n) {
+      border-right: 3px solid black;
+    }
+
+    /* Grube linie co 3 wiersze */
+    .cell:nth-child(n+1):nth-child(-n+9),
+    .cell:nth-child(n+28):nth-child(-n+36),
+    .cell:nth-child(n+55):nth-child(-n+63) {
+      border-top: 3px solid black;
+    }
+
+    .cell:nth-child(n+73) {
+      border-bottom: 3px solid black;
     }
 
     .controls {
-      margin-top: 10px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
+      margin-top: 20px;
     }
 
-    .mode-toggle {
-      margin: 10px;
+    .number-button {
+      padding: 10px;
+      margin: 5px;
+      font-size: 1.5em;
+      cursor: pointer;
+    }
+
+    .selected {
+      background-color: #ddd;
+    }
+
+    .pencil {
+      font-size: 1vmin;
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      right: 2px;
+      bottom: 2px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      pointer-events: none;
+    }
+
+    .pencil div {
+      font-size: 1.2vmin;
+      text-align: center;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <h1>🧩 Sudoku</h1>
+  <h1>🌱 Sudoku</h1>
   <div class="controls">
-    <select id="difficulty">
-      <option value="easy">Łatwy</option>
-      <option value="medium">Średni</option>
-      <option value="hard">Trudny</option>
-      <option value="extreme">Hardcorowy</option>
-    </select>
-    <input type="text" id="seedInput" placeholder="Seed (opcjonalny)">
-    <button onclick="newGame()">Nowa gra</button>
+    <label><input type="checkbox" id="pencilToggle"> 🖋️ Tryb ołówka</label>
   </div>
-  <div class="mode-toggle">
-    <label><input type="checkbox" id="pencilMode"> ✏️ Tryb ołówka</label>
-  </div>
-  <div class="board" id="board"></div>
-  <div class="number-pad">
-    <button onclick="fillCell(1)">1</button>
-    <button onclick="fillCell(2)">2</button>
-    <button onclick="fillCell(3)">3</button>
-    <button onclick="fillCell(4)">4</button>
-    <button onclick="fillCell(5)">5</button>
-    <button onclick="fillCell(6)">6</button>
-    <button onclick="fillCell(7)">7</button>
-    <button onclick="fillCell(8)">8</button>
-    <button onclick="fillCell(9)">9</button>
-    <button onclick="fillCell('')">🧽</button>
-  </div>
+  <div class="sudoku-board" id="board"></div>
 
   <script>
+    const boardElement = document.getElementById("board");
+    const pencilToggle = document.getElementById("pencilToggle");
     let selectedCell = null;
-    let fixed = [];
-    let notes = Array(81).fill(null);
+    let pencilMode = false;
 
-    function newGame() {
-      const difficulty = document.getElementById('difficulty').value;
-      const seed = document.getElementById('seedInput').value || Math.random().toString(36).substr(2, 6);
-      generateBoard(seed, difficulty);
-    }
+    pencilToggle.addEventListener("change", () => {
+      pencilMode = pencilToggle.checked;
+    });
 
-    function generateBoard(seed, difficulty) {
-      const board = document.getElementById("board");
-      board.innerHTML = "";
-      fixed = [];
-      notes = Array(81).fill(null);
-
-      const puzzle = generateSudoku(seed, difficulty);
-
+    function createBoard() {
       for (let i = 0; i < 81; i++) {
         const cell = document.createElement("div");
-        cell.className = "cell";
-        cell.dataset.index = i;
+        cell.classList.add("cell");
 
-        if (puzzle[i] !== 0) {
-          cell.textContent = puzzle[i];
-          cell.classList.add("fixed");
-          fixed[i] = true;
-        } else {
-          cell.addEventListener("click", () => selectCell(cell));
-          fixed[i] = false;
-        }
-
-        board.appendChild(cell);
-      }
-    }
-
-    function selectCell(cell) {
-      if (selectedCell) selectedCell.classList.remove("selected");
-      selectedCell = cell;
-      selectedCell.classList.add("selected");
-    }
-
-    function fillCell(value) {
-      if (!selectedCell) return;
-      const index = parseInt(selectedCell.dataset.index);
-      if (fixed[index]) return;
-
-      const pencil = document.getElementById("pencilMode").checked;
-
-      if (pencil && value !== '') {
-        if (!notes[index]) notes[index] = new Set();
-        if (notes[index].has(value)) {
-          notes[index].delete(value);
-        } else {
-          notes[index].add(value);
-        }
-        renderNotes(selectedCell, index);
-      } else {
-        selectedCell.innerHTML = value;
-        notes[index] = null;
-      }
-    }
-
-    function renderNotes(cell, index) {
-      const noteSet = notes[index];
-      if (!noteSet || noteSet.size === 0) {
-        cell.innerHTML = '';
-        return;
-      }
-      cell.innerHTML = `<div class="notes">${[...noteSet].sort().join(" ")}</div>`;
-    }
-
-    function generateSudoku(seed, difficulty) {
-      const full = generateFullBoard(seed);
-      let clues;
-      if (difficulty === 'easy') clues = 40;
-      else if (difficulty === 'medium') clues = 32;
-      else if (difficulty === 'hard') clues = 26;
-      else clues = 20;
-
-      let puzzle = [...full];
-      let removed = 81 - clues;
-      while (removed > 0) {
-        const i = Math.floor(Math.random() * 81);
-        if (puzzle[i] !== 0) {
-          puzzle[i] = 0;
-          removed--;
-        }
-      }
-      return puzzle;
-    }
-
-    function generateFullBoard(seed) {
-      const board = Array(81).fill(0);
-      let rng = mulberry32(hashCode(seed));
-
-      function isValid(board, row, col, num) {
-        for (let i = 0; i < 9; i++) {
-          if (board[row * 9 + i] === num) return false;
-          if (board[i * 9 + col] === num) return false;
-          const boxRow = 3 * Math.floor(row / 3) + Math.floor(i / 3);
-          const boxCol = 3 * Math.floor(col / 3) + (i % 3);
-          if (board[boxRow * 9 + boxCol] === num) return false;
-        }
-        return true;
-      }
-
-      function fill(idx) {
-        if (idx === 81) return true;
-        const row = Math.floor(idx / 9);
-        const col = idx % 9;
-        const nums = [1, 2, 3, 4, 5, 6, 7, 8, 9].sort(() => rng() - 0.5);
-        for (const num of nums) {
-          if (isValid(board, row, col, num)) {
-            board[idx] = num;
-            if (fill(idx + 1)) return true;
-            board[idx] = 0;
+        cell.addEventListener("click", () => {
+          if (selectedCell) {
+            selectedCell.classList.remove("selected");
           }
+          selectedCell = cell;
+          cell.classList.add("selected");
+        });
+
+        boardElement.appendChild(cell);
+      }
+
+      document.addEventListener("keydown", e => {
+        if (!selectedCell) return;
+        if (e.key >= "1" && e.key <= "9") {
+          if (pencilMode) {
+            if (!selectedCell.querySelector(".pencil")) {
+              const pencilDiv = document.createElement("div");
+              pencilDiv.classList.add("pencil");
+              for (let j = 1; j <= 9; j++) {
+                const mini = document.createElement("div");
+                mini.textContent = "";
+                pencilDiv.appendChild(mini);
+              }
+              selectedCell.appendChild(pencilDiv);
+            }
+            const index = parseInt(e.key) - 1;
+            selectedCell.querySelector(".pencil").children[index].textContent = e.key;
+          } else {
+            selectedCell.textContent = e.key;
+            const pencil = selectedCell.querySelector(".pencil");
+            if (pencil) pencil.remove();
+          }
+        } else if (e.key === "Backspace" || e.key === "Delete" || e.key === "0") {
+          selectedCell.textContent = "";
+          const pencil = selectedCell.querySelector(".pencil");
+          if (pencil) pencil.remove();
         }
-        return false;
-      }
-
-      fill(0);
-      return board;
+      });
     }
 
-    function hashCode(str) {
-      let h = 0;
-      for (let i = 0; i < str.length; i++) h = Math.imul(31, h) + str.charCodeAt(i);
-      return h >>> 0;
-    }
-
-    function mulberry32(a) {
-      return function() {
-        let t = a += 0x6D2B79F5;
-        t = Math.imul(t ^ (t >>> 15), t | 1);
-        t ^= t + Math.imul(t ^ (t >>> 7), t | 61);
-        return ((t ^ (t >>> 14)) >>> 0) / 4294967296;
-      }
-    }
-
-    window.onload = newGame;
+    createBoard();
   </script>
 </body>
 </html>
