--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     body {
       margin: 0;
       padding: 20px;
-      font-family: sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,58 +15,40 @@
       background: #f8f8f8;
     }
 
-    .sudoku-container {
+    .board {
       display: grid;
-      grid-template-columns: repeat(9, 1fr);
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      gap: 4px; /* odstęp między blokami 3x3 */
       width: 90vmin;
       height: 90vmin;
-      box-sizing: border-box;
-      border: 4px solid black; /* Gruba ramka wokół całej planszy */
+    }
+
+    .block {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      border: 3px solid black; /* gruba ramka wokół każdej sekcji */
     }
 
     .cell {
-      border: 1px solid #aaa; /* Cienka ramka wewnętrzna */
-      box-sizing: border-box;
-      background-color: white;
-    }
-
-    /* Grube linie co 3 kolumny */
-    .cell.col-3,
-    .cell.col-6 {
-      border-right: 3px solid black;
-    }
-
-    /* Grube linie co 3 wiersze */
-    .cell.row-3,
-    .cell.row-6 {
-      border-bottom: 3px solid black;
-    }
-
-    /* Pierwsza kolumna */
-    .cell.col-1 {
-      border-left: 3px solid black;
-    }
-
-    /* Pierwszy wiersz */
-    .cell.row-1 {
-      border-top: 3px solid black;
+      border: 1px solid #aaa; /* cienkie linie między komórkami */
+      background: white;
     }
   </style>
 </head>
 <body>
-  <div class="sudoku-container" id="board"></div>
-
-  <script>
-    const board = document.getElementById("board");
-
-    for (let i = 0; i < 81; i++) {
-      const row = Math.floor(i / 9) + 1;
-      const col = (i % 9) + 1;
-
-      const cell = document.createElement("div");
-      cell.classList.add("cell", `row-${row}`, `col-${col}`);
-      board.appendChild(cell);
-    }
-  </script>
+  <div class="board">
+    <!-- 9 bloków 3x3 -->
+    <script>
+      for (let b = 0; b < 9; b++) {
+        document.write('<div class="block">');
+        for (let c = 0; c < 9; c++) {
+          document.write('<div class="cell"></div>');
+        }
+        document.write('</div>');
+      }
+    </script>
+  </div>
 </body>
 </html>
