--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sudoku</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
+    body {
+      margin: 0;
+      padding: 20px;
+      font-family: sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .game-container {
+      border: 4px solid #000;
+      padding: 20px;
+      background: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+
+    .sudoku {
+      display: grid;
+      grid-template-columns: repeat(9, 1fr);
+      width: 90vmin;
+      height: 90vmin;
+      border: 2px solid black;
+    }
+
+    .cell {
+      border: 1px solid #ccc;
+      aspect-ratio: 1 / 1;
+      font-size: 2vmin;
+      text-align: center;
+      line-height: 1;
+      padding: 0;
+      background: white;
+    }
+
+    .cell:focus {
+      outline: 2px solid #007BFF;
+    }
+
+    .controls {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      justify-content: center;
+    }
+
+    .btn {
+      padding: 10px 16px;
+      font-size: 16px;
+      border: 1px solid #333;
+      background: #eee;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    .btn:hover {
+      background: #ddd;
+    }
+  </style>
+</head>
+<body>
+  <div class="game-container">
+    <h2>🧩 Gra Sudoku</h2>
+    <div class="sudoku" id="sudoku"></div>
+    <div class="controls">
+      <button class="btn" onclick="generateSudoku()">🔄 Nowa gra</button>
+      <button class="btn" onclick="clearBoard()">🧽 Wyczyść</button>
+    </div>
+  </div>
+
+  <script>
+    function generateSudoku() {
+      const preset = [
+        '', '', '3', '', '2', '', '6', '', '',
+        '9', '', '', '3', '', '5', '', '', '1',
+        '', '', '1', '8', '', '6', '4', '', '',
+        '', '', '8', '1', '', '2', '9', '', '',
+        '7', '', '', '', '', '', '', '', '8',
+        '', '', '6', '7', '', '8', '2', '', '',
+        '', '', '2', '6', '', '9', '5', '', '',
+        '8', '', '', '2', '', '3', '', '', '9',
+        '', '', '5', '', '1', '', '3', '', ''
+      ];
+
+      const cells = document.querySelectorAll('.cell');
+      cells.forEach((cell, i) => {
+        cell.value = preset[i];
+        cell.readOnly = preset[i] !== '';
+        cell.style.backgroundColor = preset[i] !== '' ? '#eee' : 'white';
+      });
+    }
+
+    function clearBoard() {
+      const cells = document.querySelectorAll('.cell');
+      cells.forEach(cell => {
+        if (!cell.readOnly) {
+          cell.value = '';
+        }
+      });
+    }
+
+    function buildBoard() {
+      const board = document.getElementById("sudoku");
+      for (let i = 0; i < 81; i++) {
+        const input = document.createElement("input");
+        input.type = "text";
+        input.maxLength = 1;
+        input.classList.add("cell");
+        input.oninput = function () {
+          this.value = this.value.replace(/[^1-9]/g, '');
+        };
+        board.appendChild(input);
+      }
+    }
+
+    buildBoard();
+    generateSudoku();
+  </script>
+</body>
+</html>
