--- a/index.html
+++ b/index.html
@@ -2,134 +2,110 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sudoku</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      margin: 0;
-      padding: 20px;
       font-family: sans-serif;
-      background: #f4f4f4;
+      margin: 0;
+      padding: 1rem;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
+      background: #f7f7f7;
     }
 
-    .game-container {
-      border: 4px solid #000;
-      padding: 20px;
-      background: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
-    }
-
-    .sudoku {
+    .sudoku-container {
       display: grid;
       grid-template-columns: repeat(9, 1fr);
       width: 90vmin;
       height: 90vmin;
-      border: 2px solid black;
+      max-width: 500px;
+      max-height: 500px;
+      border: 4px solid #000;
     }
 
     .cell {
       border: 1px solid #ccc;
-      aspect-ratio: 1 / 1;
-      font-size: 2vmin;
-      text-align: center;
-      line-height: 1;
-      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
       background: white;
     }
 
-    .cell:focus {
-      outline: 2px solid #007BFF;
+    .cell input {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      font-size: 1.5rem;
+      border: none;
+      outline: none;
     }
 
-    .controls {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      justify-content: center;
+    /* Grube linie sekcji 3x3 */
+    .cell:nth-child(3n) {
+      border-right: 2px solid #000;
     }
 
-    .btn {
-      padding: 10px 16px;
-      font-size: 16px;
-      border: 1px solid #333;
-      background: #eee;
-      cursor: pointer;
-      border-radius: 4px;
+    .cell:nth-child(n+19):nth-child(-n+27),
+    .cell:nth-child(n+46):nth-child(-n+54),
+    .cell:nth-child(n+73):nth-child(-n+81) {
+      border-bottom: 2px solid #000;
     }
 
-    .btn:hover {
-      background: #ddd;
+    .prefilled {
+      background-color: #e0e0e0;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div class="game-container">
-    <h2>🧩 Gra Sudoku</h2>
-    <div class="sudoku" id="sudoku"></div>
-    <div class="controls">
-      <button class="btn" onclick="generateSudoku()">🔄 Nowa gra</button>
-      <button class="btn" onclick="clearBoard()">🧽 Wyczyść</button>
-    </div>
-  </div>
+  <div class="sudoku-container" id="sudoku-board"></div>
 
   <script>
-    function generateSudoku() {
-      const preset = [
-        '', '', '3', '', '2', '', '6', '', '',
-        '9', '', '', '3', '', '5', '', '', '1',
-        '', '', '1', '8', '', '6', '4', '', '',
-        '', '', '8', '1', '', '2', '9', '', '',
-        '7', '', '', '', '', '', '', '', '8',
-        '', '', '6', '7', '', '8', '2', '', '',
-        '', '', '2', '6', '', '9', '5', '', '',
-        '8', '', '', '2', '', '3', '', '', '9',
-        '', '', '5', '', '1', '', '3', '', ''
-      ];
+    const initialBoard = [
+      [5, 3, '', '', 7, '', '', '', ''],
+      [6, '', '', 1, 9, 5, '', '', ''],
+      ['', 9, 8, '', '', '', '', 6, ''],
+      [8, '', '', '', 6, '', '', '', 3],
+      [4, '', '', 8, '', 3, '', '', 1],
+      [7, '', '', '', 2, '', '', '', 6],
+      ['', 6, '', '', '', '', 2, 8, ''],
+      ['', '', '', 4, 1, 9, '', '', 5],
+      ['', '', '', '', 8, '', '', 7, 9]
+    ];
 
-      const cells = document.querySelectorAll('.cell');
-      cells.forEach((cell, i) => {
-        cell.value = preset[i];
-        cell.readOnly = preset[i] !== '';
-        cell.style.backgroundColor = preset[i] !== '' ? '#eee' : 'white';
-      });
-    }
+    const board = document.getElementById('sudoku-board');
 
-    function clearBoard() {
-      const cells = document.querySelectorAll('.cell');
-      cells.forEach(cell => {
-        if (!cell.readOnly) {
-          cell.value = '';
+    function createBoard(boardData) {
+      for (let row = 0; row < 9; row++) {
+        for (let col = 0; col < 9; col++) {
+          const cell = document.createElement('div');
+          cell.classList.add('cell');
+          const value = boardData[row][col];
+
+          if (value !== '') {
+            cell.textContent = value;
+            cell.classList.add('prefilled');
+          } else {
+            const input = document.createElement('input');
+            input.setAttribute('type', 'text');
+            input.setAttribute('maxlength', '1');
+            input.addEventListener('input', (e) => {
+              const val = e.target.value;
+              if (!/^[1-9]$/.test(val)) e.target.value = '';
+            });
+            cell.appendChild(input);
+          }
+
+          board.appendChild(cell);
         }
-      });
-    }
-
-    function buildBoard() {
-      const board = document.getElementById("sudoku");
-      for (let i = 0; i < 81; i++) {
-        const input = document.createElement("input");
-        input.type = "text";
-        input.maxLength = 1;
-        input.classList.add("cell");
-        input.oninput = function () {
-          this.value = this.value.replace(/[^1-9]/g, '');
-        };
-        board.appendChild(input);
       }
     }
 
-    buildBoard();
-    generateSudoku();
+    createBoard(initialBoard);
   </script>
 </body>
 </html>
