--- a/index.html
+++ b/index.html
@@ -5,61 +5,85 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sudoku</title>
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 1rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      background: #f7f7f7;
-    }
+  body {
+    font-family: sans-serif;
+    margin: 0;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #f7f7f7;
+  }
 
-    .sudoku-container {
-      display: grid;
-      grid-template-columns: repeat(9, 1fr);
-      width: 90vmin;
-      height: 90vmin;
-      max-width: 500px;
-      max-height: 500px;
-      border: 4px solid #000;
-    }
+  .sudoku-container {
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    width: 90vmin;
+    height: 90vmin;
+    max-width: 500px;
+    max-height: 500px;
+    border: 4px solid #000;
+  }
 
-    .cell {
-      border: 1px solid #ccc;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.5rem;
-      background: white;
-    }
+  .cell {
+    border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    background: white;
+    position: relative;
+  }
 
-    .cell input {
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      font-size: 1.5rem;
-      border: none;
-      outline: none;
-    }
+  .cell input {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+    border: none;
+    outline: none;
+  }
 
-    /* Grube linie sekcji 3x3 */
-    .cell:nth-child(3n) {
-      border-right: 2px solid #000;
-    }
+  .prefilled {
+    background-color: #e0e0e0;
+    font-weight: bold;
+  }
 
-    .cell:nth-child(n+19):nth-child(-n+27),
-    .cell:nth-child(n+46):nth-child(-n+54),
-    .cell:nth-child(n+73):nth-child(-n+81) {
-      border-bottom: 2px solid #000;
-    }
+  /* Grube linie dla sekcji 3x3 */
+  .cell:nth-child(9n+1) {
+    border-left: 2px solid #000;
+  }
 
-    .prefilled {
-      background-color: #e0e0e0;
-      font-weight: bold;
-    }
-  </style>
+  .cell:nth-child(-n+9) {
+    border-top: 2px solid #000;
+  }
+
+  .cell:nth-child(3n) {
+    border-right: 2px solid #000;
+  }
+
+  .cell:nth-child(n+19):nth-child(-n+27),
+  .cell:nth-child(n+46):nth-child(-n+54),
+  .cell:nth-child(n+73):nth-child(-n+81) {
+    border-bottom: 2px solid #000;
+  }
+
+  /* Poprawka na każdą 3. kolumnę */
+  .cell:nth-child(9n+3),
+  .cell:nth-child(9n+6),
+  .cell:nth-child(9n+9) {
+    border-right: 2px solid #000;
+  }
+
+  /* Poprawka na każdą 3. linię */
+  .cell:nth-child(n+19):nth-child(-n+27),
+  .cell:nth-child(n+46):nth-child(-n+54),
+  .cell:nth-child(n+73):nth-child(-n+81) {
+    border-bottom: 2px solid #000;
+  }
+</style>
+
 </head>
 <body>
   <div class="sudoku-container" id="sudoku-board"></div>
