--- a/index.html
+++ b/index.html
@@ -1,135 +1,95 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sudoku</title>
+  <meta charset="UTF-8">
+  <title>Sudoku 9x9</title>
   <style>
-  body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #f7f7f7;
-  }
-
-  .sudoku-container {
-    display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    width: 90vmin;
-    height: 90vmin;
-    max-width: 500px;
-    max-height: 500px;
-    border: 4px solid #000;
-  }
-
-  .cell {
-    border: 1px solid #ccc;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    background: white;
-    position: relative;
-  }
-
-  .cell input {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    font-size: 1.5rem;
-    border: none;
-    outline: none;
-  }
-
-  .prefilled {
-    background-color: #e0e0e0;
-    font-weight: bold;
-  }
-
-  /* Grube linie dla sekcji 3x3 */
-  .cell:nth-child(9n+1) {
-    border-left: 2px solid #000;
-  }
-
-  .cell:nth-child(-n+9) {
-    border-top: 2px solid #000;
-  }
-
-  .cell:nth-child(3n) {
-    border-right: 2px solid #000;
-  }
-
-  .cell:nth-child(n+19):nth-child(-n+27),
-  .cell:nth-child(n+46):nth-child(-n+54),
-  .cell:nth-child(n+73):nth-child(-n+81) {
-    border-bottom: 2px solid #000;
-  }
-
-  /* Poprawka na każdą 3. kolumnę */
-  .cell:nth-child(9n+3),
-  .cell:nth-child(9n+6),
-  .cell:nth-child(9n+9) {
-    border-right: 2px solid #000;
-  }
-
-  /* Poprawka na każdą 3. linię */
-  .cell:nth-child(n+19):nth-child(-n+27),
-  .cell:nth-child(n+46):nth-child(-n+54),
-  .cell:nth-child(n+73):nth-child(-n+81) {
-    border-bottom: 2px solid #000;
-  }
-</style>
-
-</head>
-<body>
-  <div class="sudoku-container" id="sudoku-board"></div>
-
-  <script>
-    const initialBoard = [
-      [5, 3, '', '', 7, '', '', '', ''],
-      [6, '', '', 1, 9, 5, '', '', ''],
-      ['', 9, 8, '', '', '', '', 6, ''],
-      [8, '', '', '', 6, '', '', '', 3],
-      [4, '', '', 8, '', 3, '', '', 1],
-      [7, '', '', '', 2, '', '', '', 6],
-      ['', 6, '', '', '', '', 2, 8, ''],
-      ['', '', '', 4, 1, 9, '', '', 5],
-      ['', '', '', '', 8, '', '', 7, 9]
-    ];
-
-    const board = document.getElementById('sudoku-board');
-
-    function createBoard(boardData) {
-      for (let row = 0; row < 9; row++) {
-        for (let col = 0; col < 9; col++) {
-          const cell = document.createElement('div');
-          cell.classList.add('cell');
-          const value = boardData[row][col];
-
-          if (value !== '') {
-            cell.textContent = value;
-            cell.classList.add('prefilled');
-          } else {
-            const input = document.createElement('input');
-            input.setAttribute('type', 'text');
-            input.setAttribute('maxlength', '1');
-            input.addEventListener('input', (e) => {
-              const val = e.target.value;
-              if (!/^[1-9]$/.test(val)) e.target.value = '';
-            });
-            cell.appendChild(input);
-          }
-
-          board.appendChild(cell);
-        }
-      }
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: start;
+      height: 100vh;
+      margin: 0;
+      padding-top: 30px;
+      background: #f0f0f0;
     }
 
-    createBoard(initialBoard);
+    h1 {
+      margin-bottom: 20px;
+    }
+
+    .sudoku {
+      display: grid;
+      grid-template-columns: repeat(9, 40px);
+      grid-template-rows: repeat(9, 40px);
+      gap: 0;
+      border: 3px solid black;
+      background: white;
+    }
+
+    .cell {
+      width: 40px;
+      height: 40px;
+      border: 1px solid #ccc;
+      text-align: center;
+      font-size: 20px;
+      box-sizing: border-box;
+    }
+
+    .cell:focus {
+      outline: none;
+      background-color: #eef;
+    }
+
+    /* Pogrubienie co 3 pola */
+    .cell:nth-child(3n) {
+      border-right: 2px solid black;
+    }
+
+    .sudoku .cell:nth-child(n+19):nth-child(-n+27),
+    .sudoku .cell:nth-child(n+46):nth-child(-n+54),
+    .sudoku .cell:nth-child(n+73):nth-child(-n+81) {
+      border-bottom: 2px solid black;
+    }
+
+    /* Pogrubienie pionowe co 3 kolumny */
+    .sudoku .cell:nth-child(9n+1),
+    .sudoku .cell:nth-child(9n+4),
+    .sudoku .cell:nth-child(9n+7) {
+      border-left: 2px solid transparent;
+    }
+
+    .sudoku .cell:nth-child(9n) {
+      border-right: 2px solid black;
+    }
+
+    .sudoku .cell:nth-child(-n+9) {
+      border-top: 2px solid black;
+    }
+
+  </style>
+</head>
+<body>
+
+  <h1>Sudoku 9x9</h1>
+  <div class="sudoku" id="sudoku-board"></div>
+
+  <script>
+    const board = document.getElementById("sudoku-board");
+
+    for (let i = 0; i < 81; i++) {
+      const input = document.createElement("input");
+      input.type = "text";
+      input.maxLength = 1;
+      input.classList.add("cell");
+      input.oninput = function () {
+        this.value = this.value.replace(/[^1-9]/g, "");
+      };
+      board.appendChild(input);
+    }
   </script>
+
 </body>
 </html>
