--- a/index.html
+++ b/index.html
@@ -3,85 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <title>Sudoku 9x9</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    height: 100vh;
-    margin: 0;
-    padding-top: 30px;
-    background: #f0f0f0;
-  }
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: start;
+      height: 100vh;
+      margin: 0;
+      padding-top: 30px;
+      background: #f0f0f0;
+    }
 
-  h1 {
-    margin-bottom: 20px;
-  }
+    h1 {
+      margin-bottom: 20px;
+    }
 
-  .sudoku {
-    display: grid;
-    grid-template-columns: repeat(9, 40px);
-    grid-template-rows: repeat(9, 40px);
-    background: white;
-    border: 3px solid black;
-  }
+    .sudoku {
+      display: grid;
+      grid-template-columns: repeat(3, auto);
+      grid-template-rows: repeat(3, auto);
+      gap: 3px;
+      background: black;
+      padding: 3px;
+    }
 
-  .cell {
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    font-size: 20px;
-    box-sizing: border-box;
-    border: none; /* 👈 kluczowe */
-  }
+    .box {
+      display: grid;
+      grid-template-columns: repeat(3, 40px);
+      grid-template-rows: repeat(3, 40px);
+      gap: 1px;
+      background: black;
+    }
 
-  .cell:focus {
-    outline: none;
-    background-color: #eef;
-  }
+    .cell {
+      width: 40px;
+      height: 40px;
+      text-align: center;
+      font-size: 20px;
+      border: none;
+      outline: none;
+      background: white;
+    }
 
-  /* ✅ Zewnętrzna ramka */
-  .cell:nth-child(9n+1) {
-    border-left: 3px solid black;
-  }
-
-  .cell:nth-child(-n+9) {
-    border-top: 3px solid black;
-  }
-
-  .cell:nth-child(9n) {
-    border-right: 3px solid black;
-  }
-
-  .cell:nth-child(n+73) {
-    border-bottom: 3px solid black;
-  }
-
-  /* ✅ Grube linie wewnętrzne co 3 kolumny */
-  .cell:nth-child(3n) {
-    border-right: 2px solid black;
-  }
-
-  /* ✅ Grube linie wewnętrzne co 3 rzędy */
-  .cell:nth-child(n+19):nth-child(-n+27),
-  .cell:nth-child(n+46):nth-child(-n+54),
-  .cell:nth-child(n+73):nth-child(-n+81) {
-    border-bottom: 2px solid black;
-  }
-</style>
-
+    .cell:focus {
+      background-color: #eef;
+    }
+  </style>
 </head>
 <body>
 
-  <h1>Sudoku 9x9</h1>
-  <div class="sudoku" id="sudoku-board"></div>
+<h1>Sudoku 9x9</h1>
+<div class="sudoku" id="sudoku-board"></div>
 
-  <script>
-    const board = document.getElementById("sudoku-board");
+<script>
+  const sudokuBoard = document.getElementById("sudoku-board");
 
-    for (let i = 0; i < 81; i++) {
+  for (let b = 0; b < 9; b++) {
+    const box = document.createElement("div");
+    box.className = "box";
+
+    for (let i = 0; i < 9; i++) {
       const input = document.createElement("input");
       input.type = "text";
       input.maxLength = 1;
@@ -89,9 +72,12 @@
       input.oninput = function () {
         this.value = this.value.replace(/[^1-9]/g, "");
       };
-      board.appendChild(input);
+      box.appendChild(input);
     }
-  </script>
+
+    sudokuBoard.appendChild(box);
+  }
+</script>
 
 </body>
 </html>
