--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     text-align: center;
     font-size: 20px;
     background: white;
-    border: 1px solid black; /* 🔵 Wyraźna cienka ramka każdej komórki */
+    border: 1px solid black; /* 🔧 Było: #ccc – teraz: czarna ramka */
     outline: none;
     box-sizing: border-box;
   }
